5.0.0 -> 5.1a1:
    - afb: workaround for "uuid_t" type conflict, between <unistd.h> and "uuid.h"
    - jbj: fix: python: re-add rpm.archscore() for smart depsolving usage.
    - jbj: test for POPT earlier to avoid popt being blamed for neon configure failures.
    - jbj: add --with-uuid=external, --with-pcre=external to devtool "system".
    - rse: ensure that RPM Lua function util.rsplit("", ...) returns an empty table
    - jbj: "+bing" -- handle no *.rpm package found condition correctly.
    - jbj: "+bing" -- limit Fts(3) recursion to target directory traversal only.
    - jbj: "+bing" -- define "%NEVRA bing" on-the-fly for use by glob patterns.
    - jbj: "+bing" -- permit colon separated glob directory patterns.
    - jbj: macro.c: include rpmuuid.h to remove warning.
    - jbj: macro.c: add %{!?load:...} syntax, display error if %{load:...} fails.
    - jbj: updated sv.po (Translation Project).
    - jbj: fix: permit #%patchN comments by forcing single line expansion.
    - jbj: document newer macro builtins (%{@foo:...}, %{uuid:...}, and %{lua:...} todo).
    - jbj: fix: poldek in PLD needs replacement for headerGetRawEntry().
    - jbj: add rpmcliWalkFirst() to search (possibly multiple) dirs.
    - rse: add _rpmgi_pattern_{glob,regex} macros for "+N" arg-to-path rewrite.
    - jbj: functional "+N-V-R.A" path-to-repository expansions with -i/-U.
    - jbj: mire.c: add STANDALONE test exerciser.
    - jbj: use struct timeval timestamp for INSTALL{TID,TIME} and ORIGIN{TID,TIME}.
	Note: TID.usec field is always 0 atm.
    - rse: add new RPM macro "%{uuid:[<version>[, <ns>, <data>]]}" for generating UUIDs of version 1, 3, 4 or 5
    - rse: add new C API function rpmuuidMake() for generating UUIDs of version 1, 3, 4 or 5
    - rse: provide both ORIGINTIME (based on INSTALLTIME) and ORIGINTID (based on INSTALLTID)
    - jbj: pedantic identification of Foo (not foo) syscalls in --fsmdebug spew.